# Chatter-Fast-Chatter-Box

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  generate_turbo.py  pyproject.toml
app/: __init__.py  config.py  main.py
app/api/: __init__.py  router.py
app/api/endpoints/: __init__.py  books.py  folders.py  health.py  scrape.py  speech.py  voices.py
app/core/: __init__.py  audio.py  database.py  text.py  tts.py  voices.py  worker.py
app/models/: __init__.py  book_models.py  folder_models.py  responses.py  scrape_models.py
frontend/: .gitignore  DESIGN.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/books/[id]/: page.tsx
frontend/app/books/new/: page.tsx
frontend/app/voices/: page.tsx
frontend/components/: FolderCard.tsx
frontend/components/providers/: PlayerProvider.tsx
frontend/components/ui/: AudioPlayer.tsx  Button.tsx  Card.tsx  GlobalPlayer.tsx  Input.tsx
frontend/lib/: api.ts
launchd/: com.fastchatterbox.server.plist  com.fastchatterbox.server.user.plist
outputs/: .gitkeep
scripts/: dev.sh  install-launchagent.sh  install-launchd.sh  start-prod.sh  uninstall-launchagent.sh  uninstall-launchd.sh
tests/: conftest.py  test_api_books.py  test_api_folders.py  test_api_health.py  test_api_scrape.py  test_api_speech.py  test_api_voices.py  test_audio.py  test_config.py  test_database.py  test_main.py  test_text.py  test_tts.py  test_voices.py  test_worker.py
voices/: voices.json
